--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=4, user-scalable=yes">
     <title>电子杂志H5演示</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,16 +11,64 @@
     <div class="container">
         <div class="flip-book" id="book">
             <div class="page">
-                <img src="https://images.pexels.com/photos/1927376/pexels-photo-1927376.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="封面">
+                <img src="http://3pdiary.free.nf/lianjia/1.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="封面">
             </div>
             <div class="page">
-                <img src="https://images.pexels.com/photos/1687719/pexels-photo-1687719.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第2页">
+                <img src="http://3pdiary.free.nf/lianjia/2.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第2页">
             </div>
             <div class="page">
-                <img src="https://images.pexels.com/photos/322207/pexels-photo-322207.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第3页">
+                <img src="http://3pdiary.free.nf/lianjia/3.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第3页">
             </div>
             <div class="page">
-                <img src="https://images.pexels.com/photos/1115680/pexels-photo-1115680.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="封底">
+                <img src="http://3pdiary.free.nf/lianjia/4.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第4页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/5.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第5页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/6.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第6页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/7.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第7页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/8.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第8页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/9.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第9页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/10.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第10页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/11.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第11页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/12.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第12页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/13.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第13页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/14.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第14页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/15.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第15页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/16.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第16页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/17.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第17页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/18.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第18页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/19.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="第19页">
+            </div>
+            <div class="page">
+                <img src="http://3pdiary.free.nf/lianjia/20.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="封底">
             </div>
         </div>
     </div>
